{
    "name": "CharacterPlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "04087c1d-719e-4d21-ab78-94d9aef6554f",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "41cfab35-370b-4200-929f-8d7854266d71",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "PassThrough",
                    "id": "00c80e57-f82f-4817-b150-f2c77d9ccfbc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slash",
                    "type": "Button",
                    "id": "8c1a5430-3947-4dda-9a47-92514a01bad5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shield",
                    "type": "Button",
                    "id": "b99a7947-4aae-45f4-b0f6-13c9752fc63d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cast",
                    "type": "Button",
                    "id": "2672c397-b0f9-4571-abbf-8458abee1f37",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "80827b35-481c-4019-9391-6178cf7d3c71",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "356a846a-eed4-487c-9d82-baf9c9023d63",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68df9930-6d45-412b-b2c9-5331acfa707d",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "240698f4-0c44-413a-80ca-576e80132ed5",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Shield",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1e4228e-5391-454c-8a95-ced59060f846",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cast",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}